# universal_robot

./: .travis.yml
ur5_moveit_config/launch/: moveit.rviz
ur_description/urdf/: gazebo.urdf.xacro  ur10.transmission.xacro  ur10.urdf.xacro  ur5.transmission.xacro  ur5.urdf.xacro
ur_driver/: cartesian_teacher.py  prog
ur_driver/src/ur_driver/: driver.py
ur_driver_rc/: CMakeLists.txt  package.xml
ur_driver_rc/config/: ur_controller.yaml
ur_driver_rc/include/ur_driver_rc/: ur_controller_interface.h  ur_data_types.h  ur_hardware_control_loop.h  ur_hardware_interface.h
ur_driver_rc/src/: ur_controller_interface.cpp  ur_driver_rc_node.cpp  ur_hardware_control_loop.cpp  ur_hardware_interface.cpp
ur_gazebo/controller/: arm_controller_ur10.yaml
ur_gazebo/launch/: ur10.launch  ur10_bringup.launch  ur10e_bringup.launch  ur16e_bringup.launch  ur3_bringup.launch  ur3e_bringup.launch  ur5.launch  ur5_bringup.launch  ur5e_bringup.launch
ur_gazebo/launch/inc/: load_ur10.launch.xml  load_ur10e.launch.xml  load_ur16e.launch.xml  load_ur3.launch.xml  load_ur3e.launch.xml  load_ur5.launch.xml  load_ur5e.launch.xml
ur_kinematics/: package.xml  setup.py
ur_msgs/: CMakeLists.txt
