<?xml version="1.0"?>
<package>
  <name>ur_driver_rc</name>
  <version>0.0.0</version>
  <description>
    The ur_driver_rc package implements a driver for the Universal Robot family (UR5, UR10).
    It uses concepts from ros_control to allow usage of various controllers available within ros_controllers.
    It is based on an example given by Dave Coleman (https://github.com/davetcoleman/ros_control_boilerplate)
  </description>


  <author email="davetcoleman@gmail.com">Dave Coleman</author>
  <author email="fxm@ipa.fhg.de">Felix Messmer</author>
  <maintainer email="fxm@ipa.fhg.de">Felix Messmer</maintainer>


  <license>BSD</license>


  <url type="website">http://wiki.ros.org/ur_driver_rc</url>
  <url type="website">https://github.com/ros-industrial/universal_robot</url>
  <url type="butracker">https://github.com/ros-industrial/universal_robot/issues</url>
  <url type="repository">https://github.com/ros-industrial/universal_robot/</url>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>control_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>hardware_interface</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>ros_controllers</run_depend>
  <run_depend>control_msgs</run_depend>


  <export>
  </export>
</package>