<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ur_kinematics</name>
  <version>1.2.5</version>
  <description>
     Provides forward and inverse kinematics for Universal Robots designs.
     See http://hdl.handle.net/1853/50782 for details.
  </description>

  <author>Kelsey Hawkins</author>
  <maintainer email="g.a.vanderhoorn@tudelft.nl">G.A. vd. Hoorn</maintainer>
  <maintainer email="miguel.prada@tecnalia.com">Miguel Prada Sarasola</maintainer>
  <maintainer email="nhg@ipa.fhg.de">Nadia Hammoudeh Garcia</maintainer>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/ur_kinematics</url>
  <url type="bugtracker">https://github.com/ros-industrial/universal_robot/issues</url>
  <url type="repository">https://github.com/ros-industrial/universal_robot</url>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_PYTHON_VERSION == 2">python-setuptools</buildtool_depend>
  <buildtool_depend condition="$ROS_PYTHON_VERSION == 3">python3-setuptools</buildtool_depend>

  <depend>moveit_core</depend>
  <depend>moveit_kinematics</depend>
  <depend>moveit_ros_planning</depend>
  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>pluginlib</depend>
  <depend>tf_conversions</depend>
  <depend>boost</depend>

  <exec_depend>rospy</exec_depend>

  <export>
    <moveit_core plugin="${prefix}/ur_moveit_plugins.xml"/>
  </export>
</package>
